# rust-minesweeper

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
src/components/: coordinates.rs  mine.rs  mine_neighbor.rs  mod.rs  uncover.rs
src/plugins/: board.rs  mod.rs
src/plugins/board_plugin/: board.rs  board_plugin.rs  bounds.rs  events.rs  mod.rs
src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
src/systems/: camera.rs  input_handler.rs  mark.rs  mod.rs  uncover.rs  vsync.rs  window_visibility.rs
